# btpis

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
cli/: Cargo.toml
cli/src/: main.rs  utils.rs
cli/src/auth/: token.rs
cli/src/commands/: mod.rs
cli/src/commands/deploy/: mod.rs
cli/src/commands/undeploy/: mod.rs
docker/: Dockerfile.build  docker-compose.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  Layout.tsx
frontend/src/pages/: Dashboard.tsx
pypi/: README.md  pyproject.toml
scripts/: postinstall.js  sync-version.js
src/: adapters.rs  lib.rs  main.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/auth/: mod.rs  token.rs
src/commands/get/: iflow.rs  mod.rs
src/config/: mod.rs
