[package]
name = "btpis"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dirs = "5.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
tabled = { version = "0.17", features = ["derive"] }
